--- a/view/components/admin/plans/features/form/form.html
+++ b/view/components/admin/plans/features/form/form.html
@@ -1,54 +1,30 @@
-{% set plan = createModel('SubscriptionPlans','subscriptions') %}
+{% set feature = createModel('SubscriptionPlanFeatures','subscriptions') %}
 {% if uuid is not empty %}
-    {% set plan = plan.findById(uuid) %}
+    {% set feature = feature.findById(uuid) %}    
+    {% set plan_id = feature.plan_id %}
 {% endif %}
-{% set annual_price = (plan is empty) ? 0 : plan.annual_price %}
-{% set monthly_price = (plan is empty) ? 0 : plan.monthly_price %}
-
-<form class="ui form" id="subscriptoion_plan_form" method="POST">  
-    <input type="hidden" name="uuid" id="uuid" value="{{ uuid }}">        
+<form class="ui form" id="plan_feature_form" method="POST"> 
+    <input type="hidden" name="uuid" id="uuid" value="{{ uuid }}">  
+    <input type="hidden" name="plan_id" id="plan_id" value="{{ plan_id }}">        
     <div class="field">
         <label>{{ fields.title.label }}</label>
-        <input rule="empty" type="text" name="title" id="title" {{ fields.title.placeholder|attr('placeholder') }} value="{{ plan.title }}"> 
+        <input rule="empty" type="text" name="title" id="title" {{ fields.title.placeholder|attr('placeholder') }} value="{{ feature.title }}"> 
     </div>   
-    <div class="ui segment field">
-        <h4 class="ui dividing header">
-            {{ fields.price.label }}
-        </h4>       
-        <div class="three fields">
-            {{  component('components:form.fields.price',{
-                    name: 'annual_price',       
-                    placeholder: fields.annual.placeholder,         
-                    label: fields.annual.label,
-                    value: annual_price,
-                    icon: plan.currency.icon,
-                    currency_code: plan.currency.code
-                })  
-            }}
-    
-            {{  component('components:form.fields.price',{
-                    name: 'monthly_price',
-                    label: fields.monthly.label,
-                    placeholder: fields.monthly.placeholder,      
-                    value: monthly_price,
-                    icon: plan.currency.icon,
-                    currency_code: plan.currency.code
-                })  
-            }}
-            <div class="field">
-                <label>{{ fields.currency.label }}</label>
-                {{  component('currency::dropdown',{ 
-                        name: 'currency_id',                     
-                        data_field: 'id',
-                        selected: plan.currency
-                    }) 
-                }}
-            </div>
-        </div>
-    </div>    
+    {{  component('components:form.fields.slug',{
+            name: 'key',
+            label: fields.key.label,
+            editable: true,
+            show_url: false,
+            value: feature.key
+        })
+    }}   
+    <div class="field">
+        <label>{{ fields.item.label }}</label>
+        <input rule="empty" type="text" name="item_value" id="item_value" {{ fields.item.placeholder|attr('placeholder') }} value="{{ feature.item_value }}"> 
+    </div>   
     <div class="field">
         <label>{{ fields.description.label }}</label>
-        <textarea name="description" id="description" placeholder="{{ fields.description.placeholder }}">{{ plan.description }}</textarea>
+        <textarea name="description" id="description" placeholder="{{ fields.description.placeholder }}">{{ feature.description }}</textarea>
     </div> 
     {{ component('components:form.footer') }}
 </form>
