--- a/view/pages/subscription/cancel/cancel.html
+++ b/view/pages/subscription/cancel/cancel.html
@@ -1,8 +1,8 @@
 <div class="flex h-screen w-full justify-center">
     <div class="flex-shrink-0 self-center w-74">
-        <div class="ui segment fluid">
+        <div class="ui segment fluid p-4">
             <h3 class="bg-gray-300 p-4">
-                {{ title}}
+                {{ title }}
             </h3>
         </div>      
     </div>        
