--- a/view/pages/subscription/error/error.html
+++ b/view/pages/subscription/error/error.html
@@ -1,13 +1,17 @@
-{{ errorDetails|dump }}
 <div class="flex h-screen w-full justify-center">
     <div class="flex-shrink-0 self-center w-72">
-        <div class="ui raised segment">                       
+        <div class="ui raised segment">                            
             <h3 class="mt-2 pt-2">
                 <i class="icon orange warning large sign"></i>
                 <span class="pl-2">{{ title }}</span>
-            </h3>                      
+            </h3>                 
             <div class="ui message">
-                {{ error }}
+                <h5>
+                    {{ error }}
+                </h5>
+                <p class="p-2">
+                    {{ error_details.message }}
+                </p>              
             </div>
         </div>          
     </div>        
