--- a/view/pages/subscription/success/success.html
+++ b/view/pages/subscription/success/success.html
@@ -1,2 +1,15 @@
-
-Sucess checkput
+<div class="flex h-screen w-full justify-center">
+    <div class="flex-shrink-0 self-center w-72">
+        <div class="ui raised segment">                            
+            <h3 class="mt-2 pt-2">
+                <i class="icon olive large check"></i>
+                <span class="pl-2">{{ labels.success }}</span>
+            </h3>                 
+            <div class="ui message">              
+                <p class="p-2">
+                    {{ message }}
+                </p>              
+            </div>
+        </div>          
+    </div>        
+</div>
