--- a/view/components/admin/admin.html
+++ b/view/components/admin/admin.html
@@ -1,12 +1,13 @@
 {% set items = [ 
     { id: 'subscriptions_button',title: labels.subscriptions, component: 'subscriptions::admin.subscriptions', icon: 'user plus',active: true  }, 
-    { id: 'plans_button', title: labels.plans, component: 'subscriptions::admin.plans', icon: 'grid layout'},   
+    { id: 'plans_button', title: labels.plans, component: 'subscriptions::admin.plans', icon: 'grid layout'},  
+    { id: 'provider_button', title: labels.provider, component: 'subscriptions::admin.provider', icon: 'cogs'},  
     { id: 'settings_button', title: labels.settings, component: 'subscriptions::admin.settings', icon: 'cog' },    
 ] %}
 
 {{  component('components:tabs',{ 
         items: items,
         menu: { component: 'system:admin.extensions.menu.actions', extension: 'subscriptions' },
-        content: { component: 'checkout::admin.subscriptions' } 
+        content: { component: 'subscriptions::admin.subscriptions' } 
     })
 }}
