--- a/view/components/admin/settings/settings.html
+++ b/view/components/admin/settings/settings.html
@@ -1,11 +1,11 @@
-{% set current = getOption('checkout.current') %}
-{% set params = { current: current, category: 'checkout' } %}
+{% set current = getOption('subscriptions.driver') %}
+{% set params = { current: current, category: 'subscriptions' } %}
 
 {% set items = [ 
     { 
         id: 'driver_tab',
         title: labels.dirver,
-        component: 'checkout::admin.config.driver',
+        component: 'subscriptions::admin.settings.driver',
         icon: 'cogs',
         active: true,
         params: params 
@@ -18,7 +18,7 @@
         item_class: 'settings-tab-item',
         content: { 
             id: 'settings_content',
-            component: 'checkout::admin.config.driver',
+            component: 'subscriptions::admin.settings.driver',
             params: params 
         } 
     })
