--- a/view/pages/subscription/subscription.html
+++ b/view/pages/subscription/subscription.html
@@ -1,3 +1,5 @@
+<div class="mt-32">
+    <div class="ui stackable centered stretched grid">
+        {{ component('subscriptions>subscriptions.upgrade') }}
+    </div>   
 <div>
-    Subscription page
-</div>
