--- a/view/components/admin/settings/settings.html
+++ b/view/components/admin/settings/settings.html
@@ -9,6 +9,12 @@
         icon: 'cogs',
         active: true,
         params: params 
+    },
+    { 
+        id: 'logs_tab',
+        title: labels.logs,
+        component: 'subscriptions::admin.settings.logs',
+        icon: 'exclamation circle'       
     }
 ] %}
 
