--- a/view/components/admin/settings/settings.html
+++ b/view/components/admin/settings/settings.html
@@ -11,9 +11,9 @@
         params: params 
     },
     { 
-        id: 'logs_tab',
-        title: labels.logs,
-        component: 'subscriptions::admin.settings.logs',
+        id: 'imp_tab',
+        title: labels.ipn,
+        component: 'subscriptions::admin.settings.ipn',
         icon: 'exclamation circle'       
     }
 ] %}
