--- a/view/components/admin/subscriptions/view/view.html
+++ b/view/components/admin/subscriptions/view/view.html
@@ -10,7 +10,7 @@
     <thead class="table-head">
         <tr>              
             <th class="one wide collapsing left aligned">{{ columns.action }}</th>
-            <th class="one wide">{{ columns.created }}</th>          
+            <th class="two wide">{{ columns.created }}</th>          
             <th class="collapsing one wide">{{ columns.status }}</th>
             <th>{{ columns.plan }}</th>   
             <th class="tow wide">{{ columns.user }}</th>               
