--- a/view/pages/subscription/subscription.html
+++ b/view/pages/subscription/subscription.html
@@ -1,5 +1,13 @@
-<div class="mt-32">
+<div class="mt-64">
     <div class="ui stackable centered stretched grid">
+        <div class="row">
+            <div class="three wide column"></div>
+            <div class="ten wide center aligned column">
+                <h1>{{ labels.title }}</h1>
+                <div class="ui divider"></div>
+            </div>
+            <div class="three wide column"></div>
+        </div>
         {{ component('subscriptions>subscriptions.upgrade') }}
     </div>   
 <div>
