--- a/view/components/subscriptions/item/item.html
+++ b/view/components/subscriptions/item/item.html
@@ -12,13 +12,15 @@
         {{ plan.description }}
     </div>
     <div class="mt-10 h-12">       
+        {% set monthly_price = plan.pricePerMonth('monthly')|numberFormat([0]) %}
+        {% set annual_price = plan.pricePerMonth('annual')|numberFormat([0]) %}
         <div class="flex justify-center">   
             {% if plan.isFree() == false %}
             <div class="pt-3">
                 <i class="icon grey large {{ plan.currency.icon }}"></i>
             </div>                                           
-            <div class="text-6xl text-bold">                
-                {{ plan.pricePerMonth(billing_type)|numberFormat([0]) }}  
+            <div class="text-6xl text-bold plan-price" monthly-price="{{ monthly_price }}" annual-price="{{ annual_price }}">                
+                {{ (billing_type == 'annual') ? annual_price : monthly_price }}  
             </div>    
             <div class="text-gray-600 pt-4">
                 /{{ labels.month }}
@@ -28,8 +30,13 @@
     </div>
     <div class="mt-8 rounded text-center">
         {% if upgrade == true %}
-            {% set subscrbe_url = url('/subscription/create/' ~ plan.slug ~ '/' ~ billing_type) %}
-            <a class="ui big button olive upgrade-button" href="{{ subscrbe_url }}">
+            {% set monthly_subscrbe_url = url(plan.getSubscripbeUrl('monthly')) %}
+            {% set annual_subscrbe_url = url(plan.getSubscripbeUrl('annual')) %}
+            <a 
+                class="ui big button olive subscribe-button" 
+                href="{{ (billing_type == 'annual') ? annual_subscrbe_url : monthly_subscrbe_url }}"  
+                monthly-url="{{ monthly_subscrbe_url }}"
+                annual-url="{{ annual_subscrbe_url }}">
                 <i class="icon check"></i>
                 <span class="uppercase">{{ labels.subscribe }}</span>
             </a>
@@ -41,15 +48,15 @@
             </a>
         {% endif %}
     </div>
-    <div class="mt-2 p-6 text-left">
+    {% if plan.features.count > 0 %}
+    <div class="ui divider mt-2"></div>
+    <div class="pl-4 pb-4 text-left">
         <div class="ui relaxed big list">
             {% for feature in plan.features %}
             <div class="item">
                 <i class="icon check olive"></i>
                 <div class="content">                    
-                    <div class="header">
-                        {{ feature.title }}                                                               
-                    </div>
+                    {{ feature.title }}                                                               
                     <div class="description">
                         {{ feature.description }} 
                     </div>
@@ -58,5 +65,5 @@
             {% endfor %}           
         </div>
     </div>       
-    
+    {% endif %}
 </div>     
