--- a/view/components/subscriptions/upgrade/upgrade.html
+++ b/view/components/subscriptions/upgrade/upgrade.html
@@ -1,27 +1,31 @@
 {% set plans = createModel('SubscriptionPlans','subscriptions').paidPlansQuery().activeQuery() %}
 {% set plans = plans.orderBy('monthly_price').get() %}
-
-{% for plan in plans %}
-    <div class="two wide column">
-        {{  component('subscriptions>subscriptions.item',{ 
-                plan: plan,               
-                upgrade: true,
-                billing_type: billing_type
-            }) 
-        }}
-    </div>
-{% endfor %}
+{% set billing_type = billing_type|default('annual') %}
 <div class="row">
-    <div class="five wide column centered p-2">
-        <div class="flex">
+    <div class="three wide column"></div>
+    <div class="ten wide column center aligned p-2">       
+        <div class="flex">           
             <div class="p-2 font-bold">
                 {{ labels.monthly }}
             </div>        
             <div class="ui pt-2 billing-toggle toggle fitted checkbox">
-                <input type="checkbox" value="annual">
+                <input type="checkbox" value="annual" {{ (billing_type == 'annual') ? 'checked': '' }}>
                 <label></label>
             </div>
             <div class="p-2 font-bold">{{ labels.annual }}</div>
         </div>       
     </div>
+    <div class="three wide column"></div>
+</div>
+<div class="row">
+    <div class="three wide column"></div>
+    {% for plan in plans %}        
+        {{  component('subscriptions>subscriptions.item',{ 
+                plan: plan,               
+                upgrade: true,
+                billing_type: billing_type
+            }) 
+        }}    
+    {% endfor %}
+    <div class="three wide column"></div>
 </div>
