--- a/view/components/admin/provider/details/details.html
+++ b/view/components/admin/provider/details/details.html
@@ -119,6 +119,10 @@
                             <tr>
                                 <td class="one wide right aligned">{{ labels.cancel_url }}</td>
                                 <td>{{ merchant.cancel_url }}</td>
+                            </tr>  
+                            <tr>
+                                <td class="one wide right aligned">{{ labels.notify_url }}</td>
+                                <td>{{ merchant.notify_url }}</td>
                             </tr>                          
                         </tbody>
                     </table>        
