--- a/view/components/subscriptions/item/item.html
+++ b/view/components/subscriptions/item/item.html
@@ -48,22 +48,24 @@
             </a>
         {% endif %}
     </div>
-    {% if plan.features.count > 0 %}
-    <div class="ui divider mt-2"></div>
-    <div class="pl-4 pb-4 text-left">
-        <div class="ui relaxed big list">
-            {% for feature in plan.features %}
-            <div class="item">
-                <i class="icon check olive"></i>
-                <div class="content">                    
-                    {{ feature.title }}                                                               
-                    <div class="description">
-                        {{ feature.description }} 
-                    </div>
-                </div>                
+    <div class="mt-2">
+        {% if plan.features.count > 0 %}
+        <div class="ui divider"></div>
+        <div class="pl-4 pb-4 text-left">
+            <div class="ui relaxed big list">
+                {% for feature in plan.features %}
+                <div class="item">
+                    <i class="icon check olive"></i>
+                    <div class="content">                    
+                        {{ feature.title }}                                                               
+                        <div class="description">
+                            {{ feature.description }} 
+                        </div>
+                    </div>                
+                </div>
+                {% endfor %}           
             </div>
-            {% endfor %}           
-        </div>
-    </div>       
-    {% endif %}
+        </div>       
+        {% endif %}
+    </div>
 </div>     
