--- a/view/components/admin/subscriptions/details/transactions/type/type.html
+++ b/view/components/admin/subscriptions/details/transactions/type/type.html
@@ -5,7 +5,7 @@
 {% elseif type == 'subscription_cancel' %}
 <div class="ui basic red label">{{ labels.cancel }}</div> 
 {% elseif type == 'subscription_create' %}
-<div class="ui basic red label">{{ labels.create }}</div> 
+<div class="ui basic green label">{{ labels.create }}</div> 
 {% else %}
 <div class="ui basic label">{{ type }}</div> 
 {% endif %}
