--- a/view/components/admin/settings/settings.html
+++ b/view/components/admin/settings/settings.html
@@ -11,10 +11,16 @@
         params: params 
     },
     { 
-        id: 'imp_tab',
+        id: 'imn_tab',
         title: labels.ipn,
         component: 'subscriptions::admin.settings.ipn',
         icon: 'exclamation circle'       
+    },
+    { 
+        id: 'redirects_tab',
+        title: labels.redirects,
+        component: 'subscriptions::admin.settings.redirects',
+        icon: 'directions'       
     }
 ] %}
 
