--- a/view/pages/subscription/subscription.html
+++ b/view/pages/subscription/subscription.html
@@ -8,6 +8,6 @@
             </div>
             <div class="three wide column"></div>
         </div>
-        {{ component('subscriptions>subscriptions.upgrade') }}
+        {{ component('subscriptions>subscriptions') }}
     </div>   
 <div>
