--- a/view/components/admin/subscriptions/details/details.html
+++ b/view/components/admin/subscriptions/details/details.html
@@ -34,6 +34,10 @@
                             <td class="four wide right aligned">{{ labels.user }}</td>
                             <td>{{ model.user.username_or_email }}</td>
                         </tr>
+                        <tr>
+                            <td class="four wide right aligned">{{ labels.id }}</td>
+                            <td>{{ model.subscription_id }}</td>
+                        </tr>                       
                     </tbody>
                 </table>
                 <div class="mt-4 p-2">
