--- a/view/components/admin/subscriptions/view/rows/rows.html
+++ b/view/components/admin/subscriptions/view/rows/rows.html
@@ -25,8 +25,8 @@
         <td>
            {{ item.plan.title }}       
         </td>   
-        <td>
-            {{ item.next_billig_date|convertDate }}       
+        <td>                    
+            {{ item.next_billing_date|convertDate }}       
          </td>   
         <td>
             {{ item.user.user_name_or_email }}
