--- a/view/components/subscriptions/item/item.html
+++ b/view/components/subscriptions/item/item.html
@@ -1,6 +1,6 @@
 {% set billing_type = billing_type|default('annual') %}
 {% set upgrade = upgrade|default(false) %}
-<div class="ui raised inverted card rounded {{ class }}">         
+<div class="ui raised card rounded {{ class }}">         
     <h2 
         class="animate-pulse text-center p-2 text-3xl font-bold uppercase text-orange-700 border-l-0 border-r-0 border-b border-gray-700 border-solid">
         {{ plan.title }}
