--- a/view/components/admin/settings/redirects/redirects.html
+++ b/view/components/admin/settings/redirects/redirects.html
@@ -16,6 +16,13 @@
                 value: redirects.cancel_url
             }) 
         }}
+
+        {{  component('components:form.fields.url',{
+            label: labels.error,
+            name: 'error_url',
+            value: redirects.error_url
+        }) 
+    }}
     {{ component('components:form.footer') }}
     </form>
 </div>
