--- a/view/components/admin/plans/view/rows/rows.html
+++ b/view/components/admin/plans/view/rows/rows.html
@@ -9,7 +9,7 @@
 {% for item in items %}  
     <tr id="row_{{ item.uuid }}">              
         <td>             
-            {% if demo_mode == false %}
+            {% if demo_mode != true %}
             <div class="ui buttons">        
                 <button class="ui icon mini basic button edit-button" uuid="{{ item.uuid }}" title="{{ labels.edit }}">
                     <i class="icon edit"></i>
