--- a/view/components/admin/plans/features/list/list.html
+++ b/view/components/admin/plans/features/list/list.html
@@ -1,7 +1,7 @@
 {% set features = createModel('SubscriptionPlanFeatures','subscriptions').planFeaturesQuery(plan_id) %}
 {% set features = features.get() %}
 {% for feature in features %}
-    <div class="item">
+    <div class="item" id="row_{{ feature.uuid }}">
         <div class="content">
             <button class="ui mini button basic compact icon edit-feature" title="{{ labels.edit }}" uuid="{{ feature.uuid }}">
                 <i class="icon edit"></i>
