--- a/view/components/admin/plans/form/form.html
+++ b/view/components/admin/plans/form/form.html
@@ -5,7 +5,7 @@
 {% set annual_price = (plan is empty) ? 0 : plan.annual_price %}
 {% set monthly_price = (plan is empty) ? 0 : plan.monthly_price %}
 
-<form class="ui form" id="subscriptoion_plan_form" method="POST">  
+<form class="ui form" id="subscriptoion_plan_form">  
     <input type="hidden" name="uuid" id="uuid" value="{{ uuid }}">        
     <div class="field">
         <label>{{ fields.title.label }}</label>
