--- a/view/components/admin/plans/edit/tabs/tabs.html
+++ b/view/components/admin/plans/edit/tabs/tabs.html
@@ -1,5 +1,5 @@
 <div class="ui stackable tabular menu plan-edit-tabs">      
-    <div class="item link active edit-paln-tab-item" component="subscriptions::admin.plans.form" uuid="{{ uuid }}">
+    <div class="item link active edit-paln-tab-item" component="subscriptions::admin.plans.edit.details" uuid="{{ uuid }}">
         <i class="icon stream blue"></i>
         {{ labels.details }}     
     </div>  
@@ -11,7 +11,7 @@
 <div class="ui grid">
     <div class="six wide column">
         <div class="ui active tab basic segment " id="plan_edit_content">           
-            {{ component('subscriptions::admin.plans.form',{ uuid: uuid }) }}
+            {{ component('subscriptions::admin.plans.edit.details',{ uuid: uuid }) }}
         </div> 
     </div>
 </div>
